lib/simplicity_sdk_new/bluetooth_le_app/example_host/bt_host_esl_ap/esl_key_lib/esl_key_lib.h


typedef struct db_handle_s *db_handle_p;
typedef struct db_record_s *db_record_p;
typedef enum {
  ESL_KEY_LIB_INVALID_RECORD = 0, 
  ESL_KEY_LIB_AP_RECORD,
  ESL_KEY_LIB_TAG_RECORD
} esl_key_lib_record_type_t;
sl_status_t DLL_EXPORT esl_key_lib_init_database(const char* db_id, db_handle_p *hnd_out);
sl_status_t DLL_EXPORT esl_key_lib_deinit_database(db_handle_p hnd);
sl_status_t DLL_EXPORT esl_key_lib_split_threadsafe_handle(db_handle_p hnd_src,
                                                           db_handle_p *hnd_out);
sl_status_t DLL_EXPORT esl_key_lib_free_threadsafe_handle(db_handle_p hnd);
sl_status_t DLL_EXPORT esl_key_lib_alloc_record(esl_key_lib_record_type_t type,
                                                db_record_p *record_hnd_out);
void DLL_EXPORT esl_key_lib_free_record(db_record_p ptr);
sl_status_t DLL_EXPORT esl_key_lib_store_record(const db_handle_p db_hnd,
                                                const db_record_p record_hnd);
sl_status_t DLL_EXPORT esl_key_lib_store_record_and_bind(const db_handle_p db_hnd,
                                                         const db_record_p record_hnd,
                                                         const bd_addr *bind_addr);
sl_status_t DLL_EXPORT esl_key_lib_delete_record(const db_handle_p db_hnd,
                                                 const db_record_p record_hnd);
sl_status_t DLL_EXPORT esl_key_lib_clear_database(const db_handle_p hnd);
sl_status_t DLL_EXPORT esl_key_lib_get_record_by_ble_address(const db_handle_p db_hnd,
                                                             const bd_addr *ble_address,
                                                             db_record_p *record_hnd_out);
sl_status_t DLL_EXPORT esl_key_lib_get_record_by_esl_address(const db_handle_p db_hnd,
                                                             const esl_address_t esl_address,
                                                             db_record_p *record_hnd_out);
sl_status_t DLL_EXPORT esl_key_lib_set_ble_address(const bd_addr *addr, db_record_p ptr);
sl_status_t DLL_EXPORT esl_key_lib_set_esl_address(const esl_address_t addr,
                                                   db_record_p record_hnd);
sl_status_t DLL_EXPORT esl_key_lib_set_long_term_key(const aes_key_128 *ltk_key,
                                                     db_record_p ptr);