lib/wiseconnect_new/components/device/stm32/silabs_utility/common/inc/sl_status.h


typedef uint32_t sl_status_t;
int32_t sl_status_get_string_n(sl_status_t status, char *buffer, uint32_t buffer_length);
void sl_status_print(sl_status_t status);