lib/simplicity_sdk_new/bluetooth_le_app/example_host/bt_host_esl_ap/esl_key_lib_wrapper.py


        # must include standard libs, since those paths are also used by 64 bit
        # installs
        unix_lib_dirs_list += ["/lib", "/usr/lib"]
        if sys.platform.startswith("linux"):
            # Try and support multiarch work in Ubuntu
            # https://wiki.ubuntu.com/MultiarchSpec
            if bitage.startswith("32"):
                # Assume Intel/AMD x86 compat
                unix_lib_dirs_list += ["/lib/i386-linux-gnu", "/usr/lib/i386-linux-gnu"]
            elif bitage.startswith("64"):
                # Assume Intel/AMD x86 compatible
                unix_lib_dirs_list += [
                    "/lib/x86_64-linux-gnu",
                    "/usr/lib/x86_64-linux-gnu",
                ]
            else:
                # guess...
                unix_lib_dirs_list += glob.glob("/lib/*linux-gnu")
        directories.extend(unix_lib_dirs_list)

        cache = {}
        lib_re = re.compile(r"lib(.*)\.s[ol]")
        # ext_re = re.compile(r"\.s[ol]$")
        for our_dir in directories.ordered():
            try:
                for path in glob.glob("%s/*.s[ol]*" % our_dir):
                    file = os.path.basename(path)

                    # Index by filename
                    cache_i = cache.setdefault(file, set())
                    cache_i.add(path)

                    # Index by library name
                    match = lib_re.match(file)
                    if match:
                        library = match.group(1)
                        cache_i = cache.setdefault(library, set())
                        cache_i.add(path)
            except OSError:
                pass

        self._ld_so_cache = cache

    def getplatformpaths(self, libname):
        if self._ld_so_cache is None:
            self._create_ld_so_cache()

        result = self._ld_so_cache.get(libname, set())
        for i in result:
            # we iterate through all found paths for library, since we may have
            # actually found multiple architectures or other library types that
            # may not load
            yield i


# Windows


class WindowsLibraryLoader(LibraryLoader):
    """Library loader for Microsoft Windows"""

    name_formats = ["%s.dll", "lib%s.dll", "%slib.dll", "%s"]

    class Lookup(LibraryLoader.Lookup):
        """Lookup class for Windows libraries..."""

        def __init__(self, path):
            super(WindowsLibraryLoader.Lookup, self).__init__(path)
            self.access["stdcall"] = ctypes.windll.LoadLibrary(path)


# Platform switching

# If your value of sys.platform does not appear in this dict, please contact
# the Ctypesgen maintainers.

loaderclass = {
    "darwin": DarwinLibraryLoader,
    "cygwin": WindowsLibraryLoader,
    "win32": WindowsLibraryLoader,
    "msys": WindowsLibraryLoader,
}

load_library = loaderclass.get(sys.platform, PosixLibraryLoader)()


def add_library_search_dirs(other_dirs):
    """
    Add libraries to search paths.
    If library paths are relative, convert them to absolute with respect to this
    file's directory
    """
    for path in other_dirs:
        if not os.path.isabs(path):
            path = os.path.abspath(os.path.join(os.path.dirname(__file__), path))
        load_library.other_dirs.append(path)


del loaderclass

# End loader

add_library_search_dirs(['./lib'])

# Begin libraries

n = os.path.splitext(os.path.basename(__file__))[0]
if n.endswith("_wrapper"):
    n = n[:-len("_wrapper")]
p = sys.platform
if p == "darwin":
    _libs["{:s}.dylib".format(n)] = load_library(n)
elif (p == "cygwin" or p == "win32" or p == "msys"):
    _libs["{:s}.dll".format(n)] = load_library(n)
# Posix
else:
    _libs["{:s}.so".format(n)] = load_library(n)

# End libraries

# No modules

__uint8_t = c_ubyte# types.h: 38

__uint16_t = c_ushort# types.h: 40

__uint32_t = c_uint# types.h: 42

uint8_t = __uint8_t# stdint-uintn.h: 24

uint16_t = __uint16_t# stdint-uintn.h: 25

uint32_t = __uint32_t# stdint-uintn.h: 26

sl_status_t = uint32_t# sl_status.h: 504

# sl_status.h: 540
for _lib in _libs.values():
    if not _lib.has("sl_status_get_string_n", "cdecl"):
        continue
    sl_status_get_string_n = _lib.get("sl_status_get_string_n", "cdecl")
    sl_status_get_string_n.argtypes = [sl_status_t, String, uint32_t]
    sl_status_get_string_n.restype = c_int32
    break

# sl_status.h: 553
for _lib in _libs.values():
    if not _lib.has("sl_status_print", "cdecl"):
        continue
    sl_status_print = _lib.get("sl_status_print", "cdecl")
    sl_status_print.argtypes = [sl_status_t]
    sl_status_print.restype = None
    break

# sl_bgapi.h: 93
class struct_anon_4(Structure):
    pass

struct_anon_4.__slots__ = [
    'addr',
]
struct_anon_4._fields_ = [
    ('addr', uint8_t * int(6)),
]

bd_addr = struct_anon_4# sl_bgapi.h: 93

# sl_bgapi.h: 109
class struct_anon_6(Structure):
    pass

struct_anon_6.__slots__ = [
    'data',
]
struct_anon_6._fields_ = [
    ('data', uint8_t * int(16)),
]

aes_key_128 = struct_anon_6# sl_bgapi.h: 109

psa_key_id_t = uint32_t# crypto_types.h: 287

sl_bt_ead_session_key_t = uint8_t * int(16)# sl_bt_ead_core.h: 48

sl_bt_ead_iv_t = uint8_t * int(8)# sl_bt_ead_core.h: 51

# sl_bt_ead_core.h: 70
class struct_sl_bt_ead_key_material_s(Structure):
    pass

sl_bt_ead_key_material_p = POINTER(struct_sl_bt_ead_key_material_s)# sl_bt_ead_core.h: 60

# sl_bt_ead_core.h: 70
class union_anon_74(Union):
    pass

union_anon_74.__slots__ = [
    'key',
    'key_id',
]
union_anon_74._fields_ = [
    ('key', sl_bt_ead_session_key_t),
    ('key_id', psa_key_id_t),
]

struct_sl_bt_ead_key_material_s.__slots__ = [
    'unnamed_1',
    'iv',
]
struct_sl_bt_ead_key_material_s._anonymous_ = [
    'unnamed_1',
]
struct_sl_bt_ead_key_material_s._fields_ = [
    ('unnamed_1', union_anon_74),
    ('iv', sl_bt_ead_iv_t),
]

esl_address_t = uint16_t# esl_tag_core.h: 45

# esl_key_lib.h: 53
class struct_db_handle_s(Structure):
    pass

db_handle_p = POINTER(struct_db_handle_s)# esl_key_lib.h: 53

# esl_key_lib.h: 56
class struct_db_record_s(Structure):
    pass

db_record_p = POINTER(struct_db_record_s)# esl_key_lib.h: 56

enum_anon_76 = c_int# esl_key_lib.h: 63

ESL_KEY_LIB_INVALID_RECORD = 0# esl_key_lib.h: 63

ESL_KEY_LIB_AP_RECORD = (ESL_KEY_LIB_INVALID_RECORD + 1)# esl_key_lib.h: 63

ESL_KEY_LIB_TAG_RECORD = (ESL_KEY_LIB_AP_RECORD + 1)# esl_key_lib.h: 63

esl_key_lib_record_type_t = enum_anon_76# esl_key_lib.h: 63

# esl_key_lib.h: 81
for _lib in _libs.values():
    if not _lib.has("esl_key_lib_init_database", "cdecl"):
        continue
    esl_key_lib_init_database = _lib.get("esl_key_lib_init_database", "cdecl")
    esl_key_lib_init_database.argtypes = [String, POINTER(db_handle_p)]
    esl_key_lib_init_database.restype = sl_status_t
    break

# esl_key_lib.h: 94
for _lib in _libs.values():
    if not _lib.has("esl_key_lib_deinit_database", "cdecl"):
        continue
    esl_key_lib_deinit_database = _lib.get("esl_key_lib_deinit_database", "cdecl")
    esl_key_lib_deinit_database.argtypes = [db_handle_p]
    esl_key_lib_deinit_database.restype = sl_status_t
    break

# esl_key_lib.h: 111
for _lib in _libs.values():
    if not _lib.has("esl_key_lib_split_threadsafe_handle", "cdecl"):
        continue
    esl_key_lib_split_threadsafe_handle = _lib.get("esl_key_lib_split_threadsafe_handle", "cdecl")
    esl_key_lib_split_threadsafe_handle.argtypes = [db_handle_p, POINTER(db_handle_p)]
    esl_key_lib_split_threadsafe_handle.restype = sl_status_t
    break

# esl_key_lib.h: 125
for _lib in _libs.values():
    if not _lib.has("esl_key_lib_free_threadsafe_handle", "cdecl"):
        continue
    esl_key_lib_free_threadsafe_handle = _lib.get("esl_key_lib_free_threadsafe_handle", "cdecl")
    esl_key_lib_free_threadsafe_handle.argtypes = [db_handle_p]
    esl_key_lib_free_threadsafe_handle.restype = sl_status_t
    break

# esl_key_lib.h: 142
for _lib in _libs.values():
    if not _lib.has("esl_key_lib_alloc_record", "cdecl"):
        continue
    esl_key_lib_alloc_record = _lib.get("esl_key_lib_alloc_record", "cdecl")
    esl_key_lib_alloc_record.argtypes = [esl_key_lib_record_type_t, POINTER(db_record_p)]
    esl_key_lib_alloc_record.restype = sl_status_t
    break

# esl_key_lib.h: 150
for _lib in _libs.values():
    if not _lib.has("esl_key_lib_free_record", "cdecl"):
        continue
    esl_key_lib_free_record = _lib.get("esl_key_lib_free_record", "cdecl")
    esl_key_lib_free_record.argtypes = [db_record_p]
    esl_key_lib_free_record.restype = None
    break

# esl_key_lib.h: 165
for _lib in _libs.values():
    if not _lib.has("esl_key_lib_store_record", "cdecl"):
        continue
    esl_key_lib_store_record = _lib.get("esl_key_lib_store_record", "cdecl")
    esl_key_lib_store_record.argtypes = [db_handle_p, db_record_p]
    esl_key_lib_store_record.restype = sl_status_t
    break

# esl_key_lib.h: 183
for _lib in _libs.values():
    if not _lib.has("esl_key_lib_store_record_and_bind", "cdecl"):
        continue
    esl_key_lib_store_record_and_bind = _lib.get("esl_key_lib_store_record_and_bind", "cdecl")
    esl_key_lib_store_record_and_bind.argtypes = [db_handle_p, db_record_p, POINTER(bd_addr)]
    esl_key_lib_store_record_and_bind.restype = sl_status_t
    break

# esl_key_lib.h: 198
for _lib in _libs.values():
    if not _lib.has("esl_key_lib_delete_record", "cdecl"):
        continue
    esl_key_lib_delete_record = _lib.get("esl_key_lib_delete_record", "cdecl")
    esl_key_lib_delete_record.argtypes = [db_handle_p, db_record_p]
    esl_key_lib_delete_record.restype = sl_status_t
    break

# esl_key_lib.h: 209
for _lib in _libs.values():
    if not _lib.has("esl_key_lib_clear_database", "cdecl"):
        continue
    esl_key_lib_clear_database = _lib.get("esl_key_lib_clear_database", "cdecl")
    esl_key_lib_clear_database.argtypes = [db_handle_p]
    esl_key_lib_clear_database.restype = sl_status_t
    break

# esl_key_lib.h: 231
for _lib in _libs.values():
    if not _lib.has("esl_key_lib_get_record_by_ble_address", "cdecl"):
        continue
    esl_key_lib_get_record_by_ble_address = _lib.get("esl_key_lib_get_record_by_ble_address", "cdecl")
    esl_key_lib_get_record_by_ble_address.argtypes = [db_handle_p, POINTER(bd_addr), POINTER(db_record_p)]
    esl_key_lib_get_record_by_ble_address.restype = sl_status_t
    break

# esl_key_lib.h: 254
for _lib in _libs.values():
    if not _lib.has("esl_key_lib_get_record_by_esl_address", "cdecl"):
        continue
    esl_key_lib_get_record_by_esl_address = _lib.get("esl_key_lib_get_record_by_esl_address", "cdecl")
    esl_key_lib_get_record_by_esl_address.argtypes = [db_handle_p, esl_address_t, POINTER(db_record_p)]
    esl_key_lib_get_record_by_esl_address.restype = sl_status_t
    break

# esl_key_lib.h: 270
for _lib in _libs.values():
    if not _lib.has("esl_key_lib_set_ble_address", "cdecl"):
        continue
    esl_key_lib_set_ble_address = _lib.get("esl_key_lib_set_ble_address", "cdecl")
    esl_key_lib_set_ble_address.argtypes = [POINTER(bd_addr), db_record_p]
    esl_key_lib_set_ble_address.restype = sl_status_t
    break

# esl_key_lib.h: 285
for _lib in _libs.values():
    if not _lib.has("esl_key_lib_set_esl_address", "cdecl"):
        continue
    esl_key_lib_set_esl_address = _lib.get("esl_key_lib_set_esl_address", "cdecl")
    esl_key_lib_set_esl_address.argtypes = [esl_address_t, db_record_p]
    esl_key_lib_set_esl_address.restype = sl_status_t
    break

# esl_key_lib.h: 298
for _lib in _libs.values():
    if not _lib.has("esl_key_lib_set_long_term_key", "cdecl"):
        continue
    esl_key_lib_set_long_term_key = _lib.get("esl_key_lib_set_long_term_key", "cdecl")
    esl_key_lib_set_long_term_key.argtypes = [POINTER(aes_key_128), db_record_p]
    esl_key_lib_set_long_term_key.restype = sl_status_t
    break
